change NgcCookieConsent color and fixing card size on mobile screen

--- a/src/app/components/games/memory-card-game/memory-card-board/memory-card-board.component.css
+++ b/src/app/components/games/memory-card-game/memory-card-board/memory-card-board.component.css
@@ -30,6 +30,7 @@
 
 @media (max-width: 600px) {
   .grid {
-    grid-template-columns: repeat(4, 70px);
+    grid-template-columns: repeat(4, 80px);
+    gap: 5px;
   }
 }
